# backend/openapi.json
@@ -121,11 +121,11 @@
             "type": "string",
             "nullable": true
           },
-          "is_black": {
-            "type": "boolean"
-          },
           "score": {
             "type": "integer"
+          },
+          "status": {
+            "$ref": "#/components/schemas/UrlStatus"
           },
           "url": {
             "type": "string"
@@ -134,7 +134,7 @@
         "required": [
           "url",
           "score",
-          "is_black"
+          "status"
         ]
       },
       "GetUrlQuery": {
@@ -155,11 +155,11 @@
             "type": "string",
             "nullable": true
           },
-          "is_black": {
-            "type": "boolean"
-          },
           "score": {
             "type": "integer"
+          },
+          "status": {
+            "$ref": "#/components/schemas/UrlStatus"
           },
           "url": {
             "type": "string"
@@ -168,7 +168,15 @@
         "required": [
           "url",
           "score",
-          "is_black"
+          "status"
+        ]
+      },
+      "UrlStatus": {
+        "type": "string",
+        "enum": [
+          "SAFE",
+          "WARNING",
+          "BLOCK"
         ]
       }
     }
