# backend/src/models/url_reputations_vespertide.rs
@@ -1,6 +1,17 @@
 use sea_orm::entity::prelude::*;
 use serde::{Deserialize, Serialize};
 
+#[derive(Debug, Clone, PartialEq, Eq, EnumIter, DeriveActiveEnum, Serialize, Deserialize, vespera::Schema)]
+#[sea_orm(rs_type = "String", db_type = "Enum", enum_name = "url_reputations_url_status")]
+pub enum UrlStatus {
+    #[sea_orm(string_value = "SAFE")]
+    SAFE,
+    #[sea_orm(string_value = "WARNING")]
+    WARNING,
+    #[sea_orm(string_value = "BLOCK")]
+    BLOCK,
+}
+
 #[sea_orm::model]
 #[derive(Clone, Debug, PartialEq, Eq, DeriveEntityModel, Serialize, Deserialize)]
 #[sea_orm(table_name = "url_reputations")]
@@ -10,8 +21,8 @@ pub struct Model {
     pub description: Option<String>,
     #[sea_orm(indexed)]
     pub score: i32,
-    #[sea_orm(default_value = false)]
-    pub is_black: bool,
+    #[sea_orm(default_value = "SAFE")]
+    pub status: UrlStatus,
 }
 
 
